# web-algodynamic

./: .gitattributes  .gitignore  .gitmodules  Makefile  Readme.md  _config.yml  climbing.html  coding.html  index.html  maths.html  npm-shrinkwrap.json  package.json  pelicanconf.py  planetmarshall.wordpress.2013-06-26.xml  publishconf.py  requirements.txt
_archive/: 2009-03-14-oxford-to-cambridge-bike-ride.html  2009-04-19-piano-recordings.html  2010-01-21-winter-camping.html  2010-03-24-near-infra-red-pseudocolour-using-lab-colour-separations.html  2010-06-04-ben-nevis-via-the-via-the-càrn-mòr-dearg-arête-and-steall-falls.html  2010-06-30-drawing-geodesic-curves-using-the-bing-maps-silverlight-control.html  2011-09-05-adventures-in-knoydart.html  2011-10-01-vancouver.html
_drafts/: 2011-01-19-dynamic-programming-optimal-pub-crawls-and-cuda.html  2012-03-01-computational-photography-with-android.html  2012-07-03-landscope-building-an-augmented-reality-android-app-from-scratch.html  2012-08-05-three-months-in-british-columbia.html  2012-10-22-osposition-building-an-android-app.html  2013-03-28-implementing-an-irregular-grid-inspired-by-vlsi-floorplanning.html  2013-04-09-kaggle-whale-detection-challenge.html  an_android_app_for_climbing_guidebooks.md  blog_update_jekyll_amazon_s3.md  diy-portfolio-optimization.md  diy_portfolio_optimization.md  predicting-the-outcome-of-a-reality-show.md
_includes/: excerpts.html  footer.html  header.html
_layouts/: math_post.html  (+1 more)
algodynamic/src/: CMakeLists.txt  uninit_demo.cpp
demos/src/: CMakeLists.txt  uninit_demo.cpp
(+114 files in other folders)
